apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile('org.assertj:assertj-core:3.11.1')
}